@@ -1,0 +1,8 @@
+sub foo
+{
+   local('$__INCLUDE__');
+   include("incit.sl");
+}
+
+foo();
+println("Post job: $__INCLUDE__");
